crates/fastc/tests/errors/parse_error.fc
// Parse error test case - missing function body
fn broken(
